--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
-<!-- Header -->
+ader<!-- Header -->
 <header>
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <img class="img/portfolio/1736893178144.jpg" alt="profile-pic" />
+        <img class="header-image" src="img/portfolio/1736893178144.jpg" alt="profile-pic" />
         <div class="intro-text">
           <span class="name">{{ site.title }}</span>
           <hr class="star-light" />
