--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,7 +11,7 @@
       <div class="col-lg-12">
 
         <!-- The only thing you have to edit here is the first sentence. Replace the years of experience and industry type with your own info. -->
-        <p>I am a cybersecurity professional with strong experience across Governance, Risk, and Compliance (GRC), Windows Administration, and incident response. Over the past 3 years, I have built a portfolio that demonstrates the same skills companies rely on seasoned analysts to deliver — from audits and vulnerability assessments to incident handling and system hardening.</p>
+        <p>I am a cybersecurity professional with strong experience across Governance, Risk, and Compliance (GRC), Windows Administration, and incident response. Over the past 3 years, I have built a portfolio that demonstrates the same skills companies rely on seasoned analysts to deliver from audits and vulnerability assessments to incident handling and system hardening.</p>
         
         <!-- This skills section already matches your resume, so no need to edit these unless you have more to add. Remember, these should be your TOP skills, not every skill! -->
         <h3>Skills & Expertise</h3>
